GNOME Bugzilla – Bug 730373
addressbook: Fix some potential NULL pointer dereferences with SQL
Last modified: 2014-05-20 10:11:06 UTC
Patch attached. This one is fairly major, I think.
Created attachment 276772 [details] [review] addressbook: Fix some potential NULL pointer dereferences with SQL The PreflightContext.constraints field may be NULL, especially when calling query_preflight() with a newly-initialised context from PREFLIGHT_CONTEXT_INIT. Coverity issues: #1214492, #1214493
Review of attachment 276772 [details] [review]: OK, feel free to commit it. Thanks.
Attachment 276772 [details] pushed as 391481b - addressbook: Fix some potential NULL pointer dereferences with SQL