addressbook: Fix some potential NULL pointer dereferences with SQL

The PreflightContext.constraints field may be NULL, especially when
calling query_preflight() with a newly-initialised context from
PREFLIGHT_CONTEXT_INIT.

Coverity issues: #1214492, #1214493

https://bugzilla.gnome.org/show_bug.cgi?id=730373